[package]
name = "coding-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.2"
nannou = "0.19.0"
# ahash = "0.8.7"